fixed designer circle spacing

--- a/designer.css
+++ b/designer.css
@@ -109,6 +109,7 @@ nav a:hover {
   /* justify-content: space-around; */
   justify-content: space-evenly;
   flex-wrap: wrap;
+  margin-top: 100px;
 
 }
 
@@ -201,7 +202,7 @@ h4 {
 } */
 
 .footer {
-  margin-top: 300px;
+  margin-top: 200px;
   padding-bottom: 10px;
   width: 100%;
   font-size: 15px;
